--- a/css/attention.css
+++ b/css/attention.css
@@ -19,7 +19,7 @@ body {position:relative;background-color: #DDD;margin: 0 auto;max-width: 920px;p
 .list {margin-bottom:10px;position:relative;}
 .ui-accordion-header:not(.ui-accordion-header-active) {font-size:.8em;} /* Collapsed Accordion */
 
-.btn-add-list-item {position:absolute;right:8px;top:-2px;z-index:100;font-size:30px;color:#999;cursor:pointer;}
+.btn-add-list-item {position:absolute;right:0;top:0;z-index:100;height:40px;padding:6px 10px 4px 10px;font-size:60px;color:#999;overflow:hidden;cursor:pointer;}
 .btn-add-list-item:hover {color:#000;}
 
 .list-title {text-align: center;color:#999;font-size:1.2em;}
@@ -36,12 +36,12 @@ body {position:relative;background-color: #DDD;margin: 0 auto;max-width: 920px;p
 
 .ui-sortable-helper {opacity:0.7;}
 
-.btns-primary {position:absolute;height:100px;bottom:0;}
-.btn-primary {width:100px;height:100px;float:left;margin-right:10px;}
-.new-item {background: #CCC;color:#888;font-size:190px;padding-top: 24px;height: 76px;overflow: hidden;cursor:pointer;}
-.new-item:hover {color:#222;}
-.trash {background: blue no-repeat url(../images/trashcan.png);background-size:contain;}
-.drop-hover {background: red;}
+.btns-primary {height:45px;}
+.btns-primary .btn {background: #CCC;color:#444;float:left;min-width:100px;height:30px;padding:8px 15px;margin-right:10px;text-align:center;cursor:pointer;}
+.btns-primary .btn:hover {background-color: #AAA;color:#000;text-shadow: 0 1px 0 rgba(255,255,255,0.3)}
+
+.btns-primary .trash {min-width:20px;width:40px;background-image: url(../images/trashcan.png);background-repeat: no-repeat;background-position: center center;background-size:contain;}
+.btns-primary .btn.drop-hover {background-color: red;}
 
 @media only screen and (max-width : 480px) {
 	body {padding: 0 20px 100px;margin:0;}
